src/testData/commands/errors/parent/test_defaultMemberMermissions.ts
import { defineCommand } from "../../../../index.js";

export default defineCommand({
    key: "test_defaultMemberPermissions",
    defaultMemberPermissions: [],
    handler: () => { }
});
